# rust-procedural-macros

./: Cargo.toml  README.md
printvars-client/: Cargo.toml
printvars-client/src/: main.rs
printvars-core/: Cargo.toml
printvars-core/src/: lib.rs  tests.rs
printvars-derive/: Cargo.toml
printvars-derive/src/: lib.rs
src/: lib.rs
tests/: integration_test.rs
tests/ui/: printvars_no_vars.rs  printvars_no_vars.stderr
