[package]
name = "printvars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [
    "printvars-client",
    "printvars-core",
    "printvars-derive"
]

[dependencies]
printvars-derive = { path = "printvars-derive" }