[package]
name = "printvars-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dev-dependencies]
colored-diff = "0.2.3"
anyhow = "1.0"

[dependencies]
quote = "1.0.23"
syn = {version="1.0.107",features=["extra-traits", "full","fold"]}
proc-macro2 = "1.0.24"
proc-macro-error = "1.0.4"
